// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template renders default 1`] = `
"<table class=\\"table\\">
  <!--v-if-->
  <tbody>
    <!-- @slot Displays as the top row of the table -->
    <!-- @slot Displays if there are no items in the table -->
    <!-- @slot Displays as the bottom row of the table -->
  </tbody>
</table>"
`;

exports[`template renders with fields and items 1`] = `
"<table class=\\"table\\">
  <thead>
    <tr>
      <!--
                @slot Displays the header of the table
                @binding {string} key The key of the header
                @binding {object} header The header object
                -->
      <th class=\\"table-heading-sortable table-heading-sortable-asc\\">
        <!--
                        @slot Displays the content of the table header
                        @binding {object} header The header object
                        -->ajdie
      </th>
      <th class=\\"table-heading-sortable\\">
        <!--
                        @slot Displays the content of the table header
                        @binding {object} header The header object
                        -->neem
      </th>
      <th class=\\"\\">
        <!--
                        @slot Displays the content of the table header
                        @binding {object} header The header object
                        -->type
      </th>
    </tr>
  </thead>
  <tbody>
    <!-- @slot Displays as the top row of the table -->
    <!-- @slot Displays if there are no items in the table -->
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->1
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->Word
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->2
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->Press
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->3
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->ISDABEST
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->4
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->#prank
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->
      </td>
    </tr><!-- @slot Displays as the bottom row of the table -->
  </tbody>
</table>"
`;

exports[`template renders with items 1`] = `
"<table class=\\"table\\">
  <thead>
    <tr>
      <!--
                @slot Displays the header of the table
                @binding {string} key The key of the header
                @binding {object} header The header object
                -->
      <th class=\\"\\">
        <!--
                        @slot Displays the content of the table header
                        @binding {object} header The header object
                        -->id
      </th>
      <th class=\\"\\">
        <!--
                        @slot Displays the content of the table header
                        @binding {object} header The header object
                        -->name
      </th>
    </tr>
  </thead>
  <tbody>
    <!-- @slot Displays as the top row of the table -->
    <!-- @slot Displays if there are no items in the table -->
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->1
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->Word
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->2
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->Press
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->3
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->ISDABEST
      </td>
    </tr>
    <!--
                @slot Displays the row of the table
                @binding {object} item The item object
                @binding {int} index The index of the item
                -->
    <tr>
      <!--
                        @slot Displays the content of the table row
                        @binding {any} key The key of the header
                        @binding {object} item The item of the row
                        @binding {int} index The index of the item of the row
                        -->
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->4
      </td>
      <td>
        <!--
                                @slot Displays the content of the table row
                                @binding {object} item The item of the row
                                @binding {int} index The index of the item of the row
                                -->#prank
      </td>
    </tr><!-- @slot Displays as the bottom row of the table -->
  </tbody>
</table>"
`;
